--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,3 +66,11 @@ li {
 .pagination:hover{
   color:pink;
 }
+
+code {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
