--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,6 +58,12 @@ li {
   border-bottom: dashed 1px black;
 }
 
+.study-description{
+  padding: 0px 20px 20px 0px;
+  border-bottom: dashed 1px black;
+  text-align: left;
+}
+
 .pagination{
   margin-top: -50px;
   color:black;
@@ -73,4 +79,8 @@ code {
   background-color: #f1f1f1;
   padding: 2px;
   font-size: 105%;
+  margin-left: auto;
+  margin-right: auto;
+  width: autoo;
+  text-align: left;
 }
