--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,19 +25,20 @@
   bottom: 0;
 }
 
-ul {
+.ul_banner {
   list-style-type: none;
   margin: 0;
   padding: 0rem 5rem;
 }
 
-li {
+.li_banner {
   display: inline;
   float: left;
   padding: 20px;
   font-size: large;
   color: white;
 }
+
 .body {
   text-align: center;
 }
@@ -81,6 +82,6 @@ code {
   font-size: 105%;
   margin-left: auto;
   margin-right: auto;
-  width: autoo;
+  width: auto=o;
   text-align: left;
 }
