--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,11 +11,11 @@
 }
 
 .link{
-  color:white;
+  color:#F7D0E4;
   text-decoration: none;
 }
 .link:hover {
-  color: pink;
+  color: #E4F7D0;
 }
 .navBar {
   height: 5vh;
